# knowledge-search

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/: package.json  tsconfig.json
apps/api/src/: main.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ConnectorsSection.tsx  DocumentManager.tsx  Header.tsx  IngestionForm.tsx  MetricsSection.tsx  SearchResultItem.tsx  SearchSection.tsx  SearchSkeleton.tsx
apps/web/src/lib/: api.ts  types.ts
crates/agent-core/: Cargo.toml
crates/agent-core/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: batch_utils.rs  config.rs  errors.rs  lib.rs  logger.rs  telemetry.rs  types.rs
crates/common/src/entities/: document_job.rs  mod.rs
crates/common/src/migrations/: m20240602_000001_create_document_jobs_table.rs  mod.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: lib.rs  notion.rs  qdrant.rs
crates/documents/: Cargo.toml
crates/documents/src/: lib.rs
crates/documents/src/chunkers/: chunkers.rs  hierarchical.rs  mod.rs  recursive.rs
crates/documents/src/loaders/: file.rs  loader.rs  mod.rs
crates/documents/src/models/: document.rs  document_chunk.rs  mod.rs
crates/documents/src/parsers/: graph_extractor.rs  mod.rs  parser.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: lib.rs  models.rs  providers.rs  sparse.rs  traits.rs
crates/entities/: Cargo.toml
crates/entities/src/: document_job.rs  kb_graph_edge.rs  kb_node.rs  lib.rs  prelude.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  providers.rs  rag.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240602_000001_create_document_jobs_table.rs  m20260605_000002_create_kb_graph_tables.rs  m20260607_000003_add_file_path_to_document_jobs.rs
crates/search/: Cargo.toml
crates/search/src/: fusion.rs  hybrid.rs  lib.rs  rerankers.rs  retrievers.rs  service.rs
knowledge_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ingest.py  list_models.py
services/ingestion-worker/: Cargo.toml
services/ingestion-worker/src/: main.rs  pipeline.rs
services/knowledge-base-agent/: gemini_agent.py
services/knowledge_base_agent/: agent.py  logger_util.py  main.py  mcp_manager.py
services/search-worker/: Cargo.toml
services/search-worker/src/: main.rs
services/sync-worker/: Cargo.toml
services/sync-worker/src/: main.rs
