[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/entities",
    "crates/migration",
    "crates/documents",
    "crates/embeddings",
    "crates/search",
    "crates/llm",
    "crates/connectors",
    "services/ingestion-worker",
    "services/sync-worker",
    "services/search-worker",
]
