[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
schemars = "1.0"
axum = "0.8"
tracing = "0.1"
dotenvy = "0.15"

# Internal crates
common = { version = "0.1.0", path = "../common" }
search = { version = "0.1.0", path = "../search" }
connectors = { version = "0.1.0", path = "../connectors" }
embeddings = { version = "0.1.0", path = "../embeddings" }

# Rig Framework
rig = { version = "0.38.1", features = ["gemini-grpc", "derive"] }
