[package]
name = "documents"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
common = { version = "0.1.0", path = "../common" }
dotext = "0.1.1"
pdf_oxide = "0.3.60"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
text-splitter = { version = "0.30.1", features = ["markdown"] }
thiserror = "2.0.18"
tokio = "1.52.3"
uuid = { version = "1.23.2", features = ["v4"] }
