[package]
name = "entities"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.20", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-uuid",
    "with-chrono",
] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
