[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rust-mcp-sdk = { version = "0.9.0", features = ["server", "stdio", "macros"] }
common = { version = "0.1.0", path = "../common" }
search = { version = "0.1.0", path = "../search" }
embeddings = { version = "0.1.0", path = "../embeddings" }
connectors = { version = "0.1.0", path = "../connectors" }
qdrant-client = "1.18.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
anyhow = "1.0"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1.0"
