[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
sea-orm-migration = { version = "1.1.20", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
tokio = { version = "1", features = ["full"] }
