[package]
name = "search"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
common = { version = "0.1.0", path = "../common" }
connectors = { version = "0.1.0", path = "../connectors" }
embeddings = { version = "0.1.0", path = "../embeddings" }
qdrant-client = "1.18.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
