[package]
name = "search-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.7.9"
common = { version = "0.1.0", path = "../../crates/common" }
connectors = { version = "0.1.0", path = "../../crates/connectors" }
documents = { version = "0.1.0", path = "../../crates/documents" }
embeddings = { version = "0.1.0", path = "../../crates/embeddings" }
llm = { version = "0.1.0", path = "../../crates/llm" }
search = { version = "0.1.0", path = "../../crates/search" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tower-http = { version = "0.5.2", features = ["cors"] }
