[package]
name = "sync-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
common = { version = "0.1.0", path = "../../crates/common" }
connectors = { version = "0.1.0", path = "../../crates/connectors" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
